--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,38 @@
-conditions: v1
+
 language: php
 php:
-  - 7.1
+  - '7.1'
 
-script:
-  - ls -l
+conditions: v1
+
+addons:
+  chrome: stable
+
+install:
+ - composer install --no-scripts
+
+stages:
+  - name: run codeception
+    if: branch = master
 
 jobs:
   include:
-    - stage: prepare
-      script: echo prepare
-    - stage: test phpcs
-      script: echo phpcs
-      if: branch = master
-    - stage: something different
-      script: echo something different
-      if: branch = foobar
-    - stage: deploy to dev
-      if: commit_message =~ ^Merge pull request.*
-      branches:
-        only:
-          develop 
+    - stage: run codeception
       script:
       - >
-        echo;
-        echo "Starting deployment to DEV";
-        echo;
-      
+          ./vendor/bin/codecept run --env stage-standard;
+          ./vendor/bin/codecept run --env stage-interact;
+      before_script:
+        - "export DISPLAY=:99.0"
+        - "sh -e /etc/init.d/xvfb start"
+        - sleep 3 # give xvfb some time to start
+
+        - echo "Download chromedriver zip file"
+        - wget -c -nc --retry-connrefused --tries=0 http://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip -O chromedriver_linux64.zip
+        - unzip -o -q chromedriver_linux64.zip
+
+        - echo "Download selenium-server-standalone jar file"
+        - wget -c -nc --retry-connrefused --tries=0 https://goo.gl/s4o9Vx -O selenium-server-standalone.jar
+
+        - echo "Run selenium server - background process"
+        - nohup bash -c "java -Dwebdriver.chrome.driver=./chromedriver -jar selenium-server-standalone.jar &" && sleep 1
