--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -14,9 +14,13 @@ env:
       enabled:
         - WebDriver:
             url: https://www.example.com/
+            browser: chrome
+            capabilities:
+              args:
+                ['no-sandbox', 'disable-infobars', 'headless', 'disable-gpu', 'disable-dev-shm-usage']
       config:
         WebDriver:
-            browser: chrome
+
             host: localhost
             port: 4444
             window_size: 1900x1200
@@ -30,7 +34,4 @@ env:
             # Timeout for a request to return from remote selenium server
             request_timeout: 30
             wait: 30
-            capabilities:
-              useAutomationExtension : false,
-              args:
-                ['disable-infobars', 'headless', 'disable-gpu', 'disable-dev-shm-usage']
+
