--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -16,11 +16,15 @@ env:
             url: https://www.example.com/
             browser: chrome
             capabilities:
-              args:
-                ['no-sandbox', 'disable-infobars', 'headless', 'disable-gpu', 'disable-dev-shm-usage']
+              chromeOptions:
+                args:
+                  - no-sandbox
+                  - disable-infobars
+                  - headless
+                  - disable-gpu
+                  - disable-dev-shm-usage
       config:
         WebDriver:
-
             host: localhost
             port: 4444
             window_size: 1900x1200
