--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -15,16 +15,7 @@ env:
         - WebDriver:
             url: https://www.example.com/
             browser: chrome
-            capabilities:
-              chromeOptions:
-                args:
-                  - no-sandbox
-                  - disable-infobars
-                  - headless
-                  - disable-gpu
-                  - disable-dev-shm-usage
-      config:
-        WebDriver:
+            # selenium host/port
             host: localhost
             port: 4444
             window_size: 1900x1200
@@ -38,4 +29,12 @@ env:
             # Timeout for a request to return from remote selenium server
             request_timeout: 30
             wait: 30
+            capabilities:
+              chromeOptions:
+                args:
+                  - disable-infobars
+                  - headless
+                  - disable-gpu
+                  - disable-dev-shm-usage
+
 
