--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -32,9 +32,6 @@ env:
             capabilities:
               chromeOptions:
                 args:
-                  - disable-infobars
-                  - headless
-                  - disable-gpu
-                  - disable-dev-shm-usage
+                  - no-sandbox
 
 
