--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -16,9 +16,8 @@ env:
             url: https://www.example.com/
             browser: chrome
             # selenium host/port
-            host: localhost
-            port: 4444
-            window_size: 1900x1200
+            port: 9515
+            window_size: false
             # Accept self signed ssl certificates
             acceptInsecureCerts: true
             log_js_errors: true
