--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,14 @@ jobs:
         - "sh -e /etc/init.d/xvfb start"
         - sleep 3 # give xvfb some time to start
 
-        - echo "Download chromedriver zip file"
-        - wget -c -nc --retry-connrefused --tries=0 http://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip -O chromedriver_linux64.zip
-        - unzip -o -q chromedriver_linux64.zip
+        # - echo "Download chromedriver zip file"
+        # - wget -c -nc --retry-connrefused --tries=0 http://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip -O chromedriver_linux64.zip
+        # - unzip -o -q chromedriver_linux64.zip
 
         # - echo "Download selenium-server-standalone jar file"
         # - wget -c -nc --retry-connrefused --tries=0 https://goo.gl/s4o9Vx -O selenium-server-standalone.jar
 
         # - echo "Run selenium server - background process"
         # - nohup bash -c "java -Dwebdriver.chrome.driver=./chromedriver -jar selenium-server-standalone.jar &" && sleep 1
-        - bash -c "./chromedriver --port=39515 &" && sleep 2
+        # - bash -c "./chromedriver --port=39515 &" && sleep 2
+        - google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222
