--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,5 @@ jobs:
         # - echo "Run selenium server - background process"
         # - nohup bash -c "java -Dwebdriver.chrome.driver=./chromedriver -jar selenium-server-standalone.jar &" && sleep 1
         # - bash -c "./chromedriver --port=39515 &" && sleep 2
-        - google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222
+        - nohup bash -c "google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222 &" && sleep 2
+
