--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ jobs:
         - ./vendor/bin/codecept run --env stage-standard
         - ./vendor/bin/codecept run --env stage-interact
       before_script:
+        # Add an IPv6 config - see the corresponding Travis issue
+        # https://github.com/travis-ci/travis-ci/issues/8361
+        - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then sudo sh -c 'echo 0 > /proc/sys/net/ipv6/conf/all/disable_ipv6'; fi
         - "export DISPLAY=:99.0"
         - "sh -e /etc/init.d/xvfb start"
         - sleep 3 # give xvfb some time to start
