--- a/.travis.yml
+++ b/.travis.yml
@@ -10,38 +10,12 @@ sudo: required
 addons:
   chrome: stable
 
-install:
- - composer install --no-scripts
-
-stages:
-  - name: run codeception
-    if: branch = master
-
 jobs:
-  allow_failures:
-    - script: ./vendor/bin/codecept run --env stage-interact
   include:
-    - stage: run codeception
-      script:
-        - ./vendor/bin/codecept run --env stage-standard
-        - ./vendor/bin/codecept run --env stage-interact
-      before_script:
-        # Add an IPv6 config - see the corresponding Travis issue
-        # https://github.com/travis-ci/travis-ci/issues/8361
-        - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then sudo sh -c 'echo 0 > /proc/sys/net/ipv6/conf/all/disable_ipv6'; fi
-        - "export DISPLAY=:99.0"
-        - "sh -e /etc/init.d/xvfb start"
-        - sleep 3 # give xvfb some time to start
-
-        - echo "Download chromedriver zip file"
-        - wget -c -nc --retry-connrefused --tries=0 http://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip -O chromedriver_linux64.zip
-        - unzip -o -q chromedriver_linux64.zip
-
-        - echo "Download selenium-server-standalone jar file"
-        - wget -c -nc --retry-connrefused --tries=0 https://goo.gl/s4o9Vx -O selenium-server-standalone.jar
-
-        - echo "Run selenium server - background process"
-        - nohup bash -c "java -Dwebdriver.chrome.driver=./chromedriver -jar selenium-server-standalone.jar &" && sleep 1
-        # - sudo bash -c "./chromedriver &" && sleep 2
-        # - nohup bash -c "google-chrome-stable --headless --no-sandbox --remote-debugging-port=9222 &" && sleep 2
-
+    - stage: prepare
+      script: 
+        - echo prepare
+        - asas
+      after_script:
+        - env
+        - echo $TRAVIS_TEST_RESULT
