--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,14 @@ sudo: required
 addons:
   chrome: stable
 
+before_install:
+  - if [ "$TRAVIS_PULL_REQUEST" != "false" ] ; then php -f commentGithubPullrequest.php fi
+
 jobs:
   include:
     - stage: prepare
       script: 
         - echo prepare
-        - asas
       after_script:
         - env
         - echo $TRAVIS_TEST_RESULT
